--- a/Static/styles.css
+++ b/Static/styles.css
@@ -8,7 +8,10 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #f6eded;
+    background: #fff;
+    background-image: url("Images/Tile.png");
+    background-size: 20%;
+    overflow:hidden;
 }
 
 .clock {
@@ -58,7 +61,7 @@ body {
 
 #modern {
     font-family: "EB Garamond", Garamond, serif;
-    font-size: 3.5vmin;
+    font-size: 3.25vmin;
     position: absolute;
     font-weight: 500;
     top: 43%;
@@ -68,7 +71,7 @@ body {
 
 #shichen {
     font-family: 'ZCool Xiao Wei';
-    font-size: 3vmin;
+    font-size: 2.8vmin;
     position: absolute;
     top: 52.5%;
     left: 50%;
@@ -77,20 +80,33 @@ body {
 
 #minuteHand {
     position: absolute;
-    top:-11%;
+    top:0;
     left:50%;
-    max-width: 155vmin;
-    transform: translateX(-50%);
+    max-width: 95vmin;
+    max-height: 95vmin;
+    transform-origin: center;
+    transform: translateX(-50%) rotate(0deg);
+
+    transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
 }
 
 #hourHand {
     position: absolute;
-    top:-21%;
+    top:0%;
     left:50%;
-    max-width: 155vmin;
-    transform: translateX(-50%);
+    max-width: 95vmin;
+    max-height: 95vmin;
+    transform-origin: center;
+    transform: translateX(-50%) rotate(0deg);
+    
+    transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
 }
 
+.toggles {
+    transform: scale(0.5);
+    position: absolute;
+    bottom: -5.5vh;
+}
 @font-face {
     font-family: 'EB Garamond';
     src: url("Fonts/EBGaramond-Regular.ttf") format('truetype');
